--- a/package.json
+++ b/package.json
@@ -25,7 +25,14 @@
 
   "dependencies": {
     "hubot":         ">= 2.6.0 < 3.0.0",
-    "hubot-scripts": ">= 2.5.0 < 3.0.0"
+    "hubot-scripts": ">= 2.5.0 < 3.0.0",
+    "optparse": "1.0.3",
+    "node-xmpp": "0.3.2",
+    "hubot-xmpp": "0.1.0",
+    "htmlparser": "1.7.6",
+    "soupselect": "0.2.0",
+    "underscore": "1.3.3",
+    "underscore.string": "2.2.0rc"
   },
 
   "engines": {
