--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "htmlparser": "1.7.6",
     "soupselect": "0.2.0",
     "underscore": "1.3.3",
-    "underscore.string": "2.2.0rc"
+    "underscore.string": "2.2.0rc",
+    "fucking-kotol": "1.0.0"
   },
 
   "engines": {
